--- a/Exercicios/Ex 026/mq005/estilos/style.css
+++ b/Exercicios/Ex 026/mq005/estilos/style.css
@@ -21,7 +21,7 @@ header > h1{
     padding: 10px;
 }
 
-span#burguer{
+i#burguer{
     background-color: rgb(95, 95, 95);
     display: block;
     color: white;
@@ -30,7 +30,7 @@ span#burguer{
     cursor: pointer;
 }
 
-span#burguer:hover{
+i#burguer:hover{
     background-color: white;
     color: black;
 }
